--- a/01-스프링부트-시작하기.md
+++ b/01-스프링부트-시작하기.md
@@ -16,7 +16,7 @@ https://docs.spring.io/spring-boot/docs/2.0.3.RELEASE/reference/htmlsingle/#gett
 
 - intellij의 maven 선택
 
-![01-0](.\images\01-0.PNG)
+![01-0](./images/01-0.PNG)
 
 
 
