--- a/01-스프링부트-시작하기.md
+++ b/01-스프링부트-시작하기.md
@@ -22,7 +22,7 @@ https://docs.spring.io/spring-boot/docs/2.0.3.RELEASE/reference/htmlsingle/#gett
 
 - groupid, artifactid, project name을 선택한다.
 
-![01-1](.\images\01-1.PNG)
+![01-1](./images/01-1.PNG)
 
 
 
