--- a/03-자동설정.md
+++ b/03-자동설정.md
@@ -4,7 +4,7 @@
 
 
 
-#### spring boot 자동설정(1)
+#### spring boot 자동설정 이해
 
 
 
@@ -78,4 +78,156 @@ public class WebMvcAutoConfiguration {
     ~~~
 
     
+
+
+
+
+
+#### Spring boot 자동설정 만들기(1)
+
+
+
+
+
+#### autoconfigure를 위한 모듈을 생성한다. (staek-spring-boot-starter)
+
+#### @Configuration class를 정의한다.
+
+~~~java
+@Configuration
+public class HolomanConfiguration {
+
+    @Bean
+    public Holoman holoman() {
+        Holoman holoman = new Holoman();
+        holoman.setHowLong(5);
+        holoman.setName("staek");
+        return holoman;
+    }
+}
+
+public class Holoman {
+    String name;
+    int howLong;
+    ...
+}
+~~~
+
+
+
+~~~
+org.springframework.boot.autoconfigure.EnableAutoConfiguration=\
+  me.staek.HolomanConfiguration
+~~~
+
+- resources/META-INF/spring-factories
+- autoconfig 대상 class를 정의한다.
+
+
+
+
+
+~~~xml
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
+    </dependencies>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>2.0.3.RELEASE</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+~~~
+
+- pom.xml
+- autofoncig에 필요한 라이브러리를 import한다.
+
+
+
+
+
+메인 프로젝트에서 autoconfigure 객체를 호출한다.
+
+~~~xml
+<dependency>
+    <groupId>me.staek</groupId>
+    <artifactId>staek-spring-boot-starter</artifactId>
+    <version>1.0-SNAPSHOT</version>
+</dependency>
+~~~
+
+- pom.xml
+- autoconfigure 모듈을 import한다.
+
+
+
+~~~java
+@Component
+public class HolomanRunner implements ApplicationRunner {
+    @Autowired
+    Holoman holoman;
+
+    @Override
+    public void run(ApplicationArguments args) throws Exception {
+        System.out.println(holoman);
+    }
+}
+~~~
+
+- autoconfigure 모듈의 bean을 호출한다.
+
+
+
+~~~java
+@SpringBootApplication
+public class Application {
+    public static void main(String[] args) {
+        SpringApplication application = new SpringApplication(Application.class);
+        application.setWebApplicationType(WebApplicationType.NONE);
+        application.run(args);
+    }
+
+    @Bean
+    public Holoman holoman() {
+        Holoman holoman = new Holoman();
+        holoman.setName("staek");
+        holoman.setHowLong(60);
+        return holoman;
+    }
+}
+~~~
+
+- 메인 프로젝트에 bean을 새로 생성해도 autoconfigure모듈에 정의된 bean이 호출된다.
+- conponentscan 이후 autoconfigure를 조회해 오기 때문에 덮어씌워진다.
+
+
+
+
+
+참조 : https://docs.spring.io/spring-boot/docs/current/reference/htmlsingle/#features.developing-auto-configuration
+
+
+
+
+
+
+
+
+
+
+
+
 
