--- a/03-자동설정.md
+++ b/03-자동설정.md
@@ -4,7 +4,7 @@
 
 
 
-#### spring boot 자동설정 이해
+### spring boot 자동설정 이해
 
 
 
@@ -33,7 +33,7 @@ public class Application {
 
 ##### @EnableAutoConfiguration 빈 등록(1)
 
-~~~xml
+~~~properties
 # Auto Configure
 org.springframework.boot.autoconfigure.EnableAutoConfiguration=\
 org.springframework.boot.autoconfigure.admin.SpringApplicationAdminJmxAutoConfiguration,\
@@ -83,7 +83,7 @@ public class WebMvcAutoConfiguration {
 
 
 
-#### Spring boot 자동설정 만들기(1)
+### Spring boot 자동설정 만들기(1)
 
 
 
@@ -113,19 +113,29 @@ public class Holoman {
 }
 ~~~
 
+- 위치 : autoconfigure project
+- `@Configuration` 와 `@Bean`를 이용해 빈을 생성한다.
 
 
-~~~
+
+
+
+##### spring.factories 작성
+
+~~~properties
 org.springframework.boot.autoconfigure.EnableAutoConfiguration=\
   me.staek.HolomanConfiguration
 ~~~
 
-- resources/META-INF/spring-factories
-- autoconfig 대상 class를 정의한다.
+- 파일위치 : resources/META-INF/spring.factories
+- autoconfig 대상 class를 정의한다. 
+- `@EnableAutoConfiguration` 를 호출하는 프로젝트는 spring.factories에 작성된 Configuration class를 순회하며 빈을 생성한다.
 
 
 
 
+
+##### maven 의존 라이브러리 작성
 
 ~~~xml
     <dependencies>
@@ -159,7 +169,7 @@ org.springframework.boot.autoconfigure.EnableAutoConfiguration=\
 
 
 
-메인 프로젝트에서 autoconfigure 객체를 호출한다.
+##### 메인 프로젝트에서 autoconfigure 객체를 호출한다.
 
 ~~~xml
 <dependency>
@@ -173,6 +183,8 @@ org.springframework.boot.autoconfigure.EnableAutoConfiguration=\
 - autoconfigure 모듈을 import한다.
 
 
+
+##### autoconfigure bean 호출
 
 ~~~java
 @Component
@@ -190,6 +202,8 @@ public class HolomanRunner implements ApplicationRunner {
 - autoconfigure 모듈의 bean을 호출한다.
 
 
+
+##### bean 중복 생성
 
 ~~~java
 @SpringBootApplication
@@ -211,9 +225,7 @@ public class Application {
 ~~~
 
 - 메인 프로젝트에 bean을 새로 생성해도 autoconfigure모듈에 정의된 bean이 호출된다.
-- conponentscan 이후 autoconfigure를 조회해 오기 때문에 덮어씌워진다.
-
-
+- conponentscan 이후 autoconfigure를 조회해 오기 때문에 새로운 빈 정보로 덮어씌워진다.
 
 
 
@@ -228,6 +240,99 @@ public class Application {
 
 
 
+
+### Spring boot 자동설정 만들기(2)
+
+
+
+#### aucoconfigure 빈 생성 조건 추가
+
+~~~java
+@Configuration
+public class HolomanConfiguration {
+    @Bean
+    @ConditionalOnMissingBean
+    public Holoman holoman() {
+        Holoman holoman = new Holoman();
+        holoman.setHowLong(5);
+        holoman.setName("staek");
+        return holoman;
+    }
+}
+~~~
+
+- 프로젝트 : autoconfigure project
+- main project에서 이미 빈이 존재한는 경우 빈생성을 스킵하도록 `@ConditionalOnMissingBean` 애노테이션을 추가한다. 
+
+
+
+
+
+#### properties를 이용한 빈 내부 데이터 세팅
+
+~~~java
+@ConfigurationProperties("holoman")
+public class HolomanProperties {
+    private String name;
+    private int howLong;
+
+    ...
+}
+
+@Configuration
+@EnableConfigurationProperties(HolomanProperties.class)
+public class HolomanConfiguration {
+
+    @Bean
+    @ConditionalOnMissingBean
+    public Holoman holoman(HolomanProperties properties) {
+        Holoman holoman = new Holoman();
+        holoman.setHowLong(properties.getHowLong());
+        holoman.setName(properties.getName());
+        return holoman;
+    }
+}
+~~~
+
+- 프로젝트 : autoconfigure project
+
+- `@ConfigurationProperties("holoman")` 를 이용하여 프로퍼티의 키를 정의한다.
+
+- `@EnableConfigurationProperties(HolomanProperties.class)` 를 이용하여 프로퍼티 파일을 호출하고, 값을 세팅한다.
+
+  
+
+
+
+##### main project properties 키&값 세팅
+
+~~~properties
+holoman.name=staek2
+holoman.how-long=100
+~~~
+
+- 프로젝트 :  main
+- 파일위치 : /resources/application.properties
+
+- holoman과 name,how-long은 `@ConfigurationProperties("holoman")` 을 사용한 클래스에 정의한 변수들과 각각 매핑된다.
+
+
+
+##### main project 실행
+
+```java
+@SpringBootApplication
+public class Application {
+    public static void main(String[] args) {
+        SpringApplication application = new SpringApplication(Application.class);
+        application.setWebApplicationType(WebApplicationType.NONE);
+        application.run(args);
+    }
+}
+```
+
+- 프로젝트 : main
+- 프로젝트 실행 시, holoman 빈을 직접 생성하지 않아도 autoconfigure에서 properties 값을 참조하여 생성한 빈을 참조할 수 있다.
 
 
 
