--- a/08-외부설정.md
+++ b/08-외부설정.md
@@ -94,7 +94,7 @@
 
 
 
-![image-20220224061800678](.\images\08-0.PNG)
+![image-20220224061800678](./images/08-0.PNG)
 
 - test : /resources/application.properties 를 만들고
 - 프로젝트 설정에서 Test Resources를 mark 해주면, test환경에서 `resources`를 사용할 수 있다.
