--- a/08-외부설정.md
+++ b/08-외부설정.md
@@ -113,6 +113,96 @@
 
 
 
+#### @ConfigurationProperties vs @Value
+
+- properties 값이 많을경우, `@Value`대신 java를 작성하여 관리할 수 있다.
+
+```java
+@Component
+@ConfigurationProperties("staek")
+public class SteakProperties {
+    String name;
+    int age;
+    String fullName;
+
+    public String getName() {
+        return name;
+    }
+
+    public void setName(String name) {
+        this.name = name;
+    }
+
+    public int getAge() {
+        return age;
+    }
+
+    public void setAge(int age) {
+        this.age = age;
+    }
+
+    public String getFullName() {
+        return fullName;
+    }
+
+    public void setFullName(String fullName) {
+        this.fullName = fullName;
+    }
+}
+```
+
+~~~java
+@SpringBootApplication
+@EnableConfigurationProperties(SteakProperties.class)
+public class Application {
+    public static void main(String[] args) {
+        SpringApplication application = new SpringApplication(Application.class);
+        application.setWebApplicationType(WebApplicationType.NONE);
+        application.run(args);
+    }
+}
+~~~
+
+- `@EnableConfigurationProperties(SteakProperties.class)` 에서 관련 프로퍼티 클래스를 읽어오는 작업을 하는데, `springboot` 에 이미 포함되어 있어 생략해도 된다.
+
+
+
+~~~java
+
+@Component
+//@Order(1) // ApplicationRunner가 여러개일때 순서를 정한다.
+public class SampleListener implements ApplicationRunner {
+
+    @Autowired
+    SteakProperties steakProperties;
+
+    @Override
+    public void run(ApplicationArguments args) throws Exception {
+        System.out.println(steakProperties.getAge());
+        System.out.println(steakProperties.getFullName());
+    }
+}
+
+
+
+~~~
+
+- `SteakProperties` 는 `@Component` 에 의해 빈으로 등록되었으므로, `@Autowired` 하여 읽어와 사용할 수 있다.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
