--- a/08-외부설정.md
+++ b/08-외부설정.md
@@ -107,12 +107,6 @@
 
 
 
-
-
-
-
-
-
 #### @ConfigurationProperties vs @Value
 
 - properties 값이 많을경우, `@Value`대신 java를 작성하여 관리할 수 있다.
@@ -167,6 +161,8 @@ public class Application {
 
 
 
+
+
 ~~~java
 
 @Component
@@ -188,6 +184,8 @@ public class SampleListener implements ApplicationRunner {
 ~~~
 
 - `SteakProperties` 는 `@Component` 에 의해 빈으로 등록되었으므로, `@Autowired` 하여 읽어와 사용할 수 있다.
+- `@ConfigurationProperties ` 는 타입-세이프 하다.
+  - `@Value`는 properties의 key를 정확히 문자열로 작성해야 하지만, `@ConfigurationProperties`는 java 언어로 작성하기 때문에 안전하다.
 
 
 
@@ -197,9 +195,36 @@ public class SampleListener implements ApplicationRunner {
 
 
 
+##### 융통성 있는 바인딩
+
+~~~properties
+staek.name = seongtaekkim
+staek.age = ${random.int(50,100)}
+staek.full_name = ${staek.name} kim
+~~~
+
+- `@ConfigurationProperties`는 `context-path` `context_path` `contextPath ` `CONTEXTPATH ` 와 같은 여러가지 작성 방법에 대해 java로 불러 올 수 있다.
 
 
 
+ 
+
+```java
+@Component
+@ConfigurationProperties("staek")
+@Validated
+public class SteakProperties {
+    @NotEmpty
+    String name;
+    int age;
+    String fullName;
+
+    ...
+}
+```
+
+- `@Validated`를 이용해서 값의 범위를 정할 수 있다. (`@NotEmpty` `@Size` 등)
+- 값 범위를 넘어서면 에러가 발생된다.
 
 
 
