modified:   "09-\355\224\204\353\241\234\355\214\214\354\235\274.md" 	new file:   "10-\353\241\234\352\271\205.md"

--- a/09-프로파일.md
+++ b/09-프로파일.md
@@ -2,8 +2,6 @@
 
 
 
-
-
 @Profile 애노테이션은 어디에? 
 
 ● @Configuration 
@@ -15,3 +13,67 @@
 ● spring.profiles.include 프로파일용 프로퍼티 
 
 ● application-{profile}.properties
+
+
+
+
+
+```
+@Profile("prod")
+@Configuration
+public class BaseConfiguration {
+    @Bean
+    public String hello() {
+        return "hello";
+    }
+}
+
+@Profile("test")
+@Configuration
+public class TestConfiguration {
+    @Bean
+    public String hello() {
+        return "hello test";
+    }
+}
+
+```
+
+
+
+
+
+
+
+
+
+```
+staek.name = seongtaekkim
+staek.age = ${random.int(50,100)}
+staek.full_name = ${staek.name} kim
+staek.sessionTimeout=25s
+spring.profiles.active=test
+```
+
+- 
+
+
+
+```
+staek.name=staek prod
+spring.profiles.include=proddb
+```
+
+
+
+```
+staek.name=staek test
+```
+
+
+
+```
+staek.name=staek prod
+spring.profiles.include=proddb
+```
+
