--- a/10-로깅.md
+++ b/10-로깅.md
@@ -2,3 +2,30 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+~~~
+<?xml version="1.0" encoding="UTF-8"?>
+<configuration>
+    <include resource="org/springframework/boot/logging/logback/base.xml"/>
+    <logger name="me.staek" level="DEBUG"/>
+</configuration>
+~~~
+
+- logback-spring.xml
