add webflux test

--- a/11-테스트.md
+++ b/11-테스트.md
@@ -83,13 +83,39 @@ class SampleControllerTest {
 
 
 
+```xml
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-webflux</artifactId>
+</dependency>
+```
+
+- webflux 의존성 추가
 
 
 
+```java
+@ExtendWith(SpringExtension.class)
+@SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
+class SampleControllerTest {
+
+    @Autowired
+    TestRestTemplate testRestTemplate;
+    
+    @Autowired
+    WebTestClient webTestClient; // 비동기 동작
 
 
+    @Test
+    public void hello() throws Exception {
 
+        webTestClient.get().uri("/hello").exchange()
+                .expectStatus().isOk()
+                .expectBody(String.class).isEqualTo("hello staek");
 
+    }
+}
+```
 
 
 
