--- a/11-테스트.md
+++ b/11-테스트.md
@@ -24,7 +24,7 @@
 
 
 
-##### `@Controlle` 추가
+##### `@Controller` 추가
 
 ```java
 @RestController
@@ -81,6 +81,60 @@ class SampleControllerTest {
 
 
 
+```java
+@ExtendWith(SpringExtension.class)
+@SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
+class SampleControllerTest {
+
+    @Autowired
+    TestRestTemplate testRestTemplate;
+
+    @Test
+    public void hello() throws Exception {
+       String result = testRestTemplate.getForObject("/hello", String.class);
+        assertThat(result).isEqualTo("hello staek");
+    }
+}
+```
+
+- `RANDOM_PORT` : 내장톰캣을 사용
+
+
+
+
+
+```java
+@ExtendWith(SpringExtension.class)
+@SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
+class SampleControllerTest {
+
+    @Autowired
+    TestRestTemplate testRestTemplate;
+
+    @MockBean
+    SampleService mockSampleService;
+    
+    @Autowired
+    WebTestClient webTestClient; // 비동기 동작
+
+
+    @Test
+    public void hello() throws Exception {
+     
+        when(mockSampleService.getName()).thenReturn("seongtaek");
+
+        String result = testRestTemplate.getForObject("/hello", String.class);
+        assertThat(result).isEqualTo("hello seongtaek");
+    }
+}
+```
+
+- service를 모킹하여 결과를 테스트한다.
+
+
+
+
+
 
 
 ```xml
@@ -91,6 +145,7 @@ class SampleControllerTest {
 ```
 
 - webflux 의존성 추가
+- webClient를 사용하기 위해 추가
 
 
 
@@ -117,7 +172,7 @@ class SampleControllerTest {
 }
 ```
 
-
+- 비동기 테스트를 위해 webTestClient를 사용한다.
 
 
 
